--- a/.github/workflows/new_features.yml
+++ b/.github/workflows/new_features.yml
@@ -4,7 +4,13 @@ jobs:
   j1:
     name: Job j1
     runs-on: ubuntu-latest
+    outputs:
+      salida: ${{ steps.imprimir.outputs.respuesta }}
     steps:
     - name: checkout de repositorio
       uses: actions/checkout@v2
+    - name: respuesta de job
+      env: 
+        MENSAJE: "Prueba de mensaje"
+      run: echo "::set-output name=respuesta::${{MENSAJE}}"
 
