--- a/.github/workflows/new_features.yml
+++ b/.github/workflows/new_features.yml
@@ -11,6 +11,6 @@ jobs:
       uses: actions/checkout@v2
     - name: respuesta de job
       env: 
-        MENSAJE: "Prueba de mensaje"
+        MENSAJE: Prueba de mensaje
       run: echo "::set-output name=respuesta::${{MENSAJE}}"
 
