--- a/.github/workflows/new_features.yml
+++ b/.github/workflows/new_features.yml
@@ -1,14 +1,39 @@
-name: Pruebas merge
-on: push
+# name: Pruebas merge
+# on: push
+# jobs:
+#   j1:
+#     name: Job j1
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: checkout de repositorio
+#       uses: actions/checkout@v2
+#     - name: respuesta de job
+#       env: 
+#         MENSAJE: Prueba de mensaje
+#       run: echo "::set-output name=respuesta::${MENSAJE}"
+name: Hola mundo
+on:
+  push:
+    branches: [ master ]
 jobs:
-  j1:
-    name: Job j1
+  Mi-primer-job:
+    name: Mi primer job
+    runs-on: ubuntu-latest
+    outputs:
+      salida: ${{ steps.imprimir.outputs.respuesta }}
+    steps:
+    - name: Imprimir
+      id: imprimir
+      env:
+        MI_VARIABLE: Hola mundo
+      run: echo "::set-output name=respuesta::${MI_VARIABLE}"
+
+  Mi-segundo-job:
+    needs: Mi-primer-job
+    name: Mi segundo job
     runs-on: ubuntu-latest
     steps:
-    - name: checkout de repositorio
-      uses: actions/checkout@v2
-    - name: respuesta de job
-      env: 
-        MENSAJE: Prueba de mensaje
-      run: echo "::set-output name=respuesta::${MENSAJE}"
+    - name: Imprimir
+      id: imprimir
+      run: echo ${{needs.Mi-primer-job.outputs.salida}}
 
