--- a/.github/workflows/new_features.yml
+++ b/.github/workflows/new_features.yml
@@ -14,7 +14,7 @@
 name: Hola mundo
 on:
   push:
-    branches: [ master ]
+    branches: [ develop ]
 jobs:
   Mi-primer-job:
     name: Mi primer job
