--- a/.github/workflows/new_features.yml
+++ b/.github/workflows/new_features.yml
@@ -9,8 +9,8 @@ jobs:
     steps:
     - name: Validar rama del commit
       if: ${{ contains(github.event.head_commit.message, 'FEATURE') }}
-    - name: Push from feature branch
-      if: ${{ success() }}
+    # - name: Push from feature branch
+    #   if: ${{ success() }} 
     - name: Checkout de repositorio
       uses: actions/checkout@v2
     # needs: j1
