--- a/.github/workflows/new_features.yml
+++ b/.github/workflows/new_features.yml
@@ -8,12 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Validar rama del commit
-      env:
-        RESULT: ${{ contains(github.event.head_commit.message, 'FEATURE') }}
-      if: ${{ RESULT }}
+      if:  ${{ contains(github.event.head_commit.message, 'FEATURE') }}
+      env: 
+        RESULT: Exitoso
       run: echo "::set-output name=respuesta::${RESULT}"
-    # - name: Push from feature branch
-    #   if: ${{ success() }} 
     - name: Checkout de repositorio
       uses: actions/checkout@v2
     # needs: j1
