--- a/.github/workflows/new_features.yml
+++ b/.github/workflows/new_features.yml
@@ -7,11 +7,12 @@ jobs:
     name: Job j1
     runs-on: ubuntu-latest
     steps:
-    - name: Validar rama del commit
+    - name: Validar commit
       if:  ${{ contains(github.event.head_commit.message, 'FEATURE') }}
       env: 
         RESULT: Exitoso
       run: echo "::set-output name=respuesta::${RESULT}"
+    - name: Checkout de repositorio
       uses: actions/checkout@v2
     # needs: j1
     # name: UnitTest
