--- a/.github/workflows/new_features.yml
+++ b/.github/workflows/new_features.yml
@@ -1,19 +1,43 @@
 name: Pruebas merge
 on: 
   push:
-    branches-ignore: [ develop ]
+    branches-ignore: [ develop, main, hotfix ]
 jobs:
   j1:
     name: Job j1
+    if:  ${{ contains(github.event.head_commit.message, 'FEATURE') }}
     runs-on: ubuntu-latest
     steps:
-    - name: Validar commit
-      if:  ${{ contains(github.event.head_commit.message, 'FEATURE') }}
-      env: 
-        RESULT: Exitoso
-      run: echo "::set-output name=respuesta::${RESULT}"
     - name: Checkout de repositorio
       uses: actions/checkout@v2
+    - name: Configuracion de entorno python
+      uses: actions/setup-python@v2
+      with:
+          python-version: '3.7'
+    - name: Instalacion de librerias y dependencias
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Correr pruebas
+      id: correr-pruebas
+      run: python -m unittest -v tests/test_persona.py
+    - name: validar resultado con errores
+      if: ${{ failure() }}
+      env: 
+        MENSAJE_ERROR: Una o varias pruebas fallaron
+      run: echo "::set-output name=respuesta::${MENSAJE_EXITOSO}"
+    - name: Validar resultados sin errores
+      if: ${{ success() }}
+      env:
+        MENSAJE_EXITO: Todas las pruebas fueron exitosas
+      run: echo "::set-output name=respuesta::${MENSAJE_EXITO}"
+    - name: Cálcula de cubrimiento
+      id: cubrimiento
+      run: |
+          coverage run -m unittest tests/test_persona.py
+          coverage report -m
+      
+ 
     # needs: j1
     # name: UnitTest
     # runs-on: ubuntu-latest
