--- a/.github/workflows/new_features.yml
+++ b/.github/workflows/new_features.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches-ignore: [ develop, main, hotfix ]
 jobs:
-  Actualizar rama:
+  Actualizar-rama:
     name: Actulizar rama actual con develop
     if:  ${{ contains(github.event.head_commit.message, 'FEATURES') }}
     runs-on: ubuntu-latest
@@ -16,7 +16,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         source-branch: develop
         target-branch: ${{ github.ref }}
-  Pruebas unitarias: 
+  Pruebas-unitarias: 
     name: UnitTest sobre rama actual
     needs: Actualizar rama
     runs-on: ubuntu-latest
