--- a/.github/workflows/new_features.yml
+++ b/.github/workflows/new_features.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Checkout de repositorio
       uses: actions/checkout@v2
+      with: 
+        ref: ${{ github.ref }}
     - name: Merge develop -> actual
       uses: tukasz/direct-merge-action@master
       with:
