--- a/.github/workflows/new_features.yml
+++ b/.github/workflows/new_features.yml
@@ -10,8 +10,6 @@ jobs:
     steps:
     - name: Checkout de repositorio
       uses: actions/checkout@v2
-      with: 
-        ref: ${{ github.ref }}
     - name: Merge develop -> actual
       uses: tukasz/direct-merge-action@master
       with:
@@ -23,10 +21,12 @@ jobs:
     needs: Actualizar-rama
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout de repositorio
+      uses: actions/checkout@v2
     - name: Configuracion de entorno python
       uses: actions/setup-python@v2
       with:
-          python-version: '3.7'
+          python-version: '3.8'
     - name: Instalacion de librerias y dependencias
       run: |
         python -m pip install --upgrade pip
